
[metadata]
name = loadlimit
summary = Simple asyncronous load testing
author = Ariel De Ocampo
author-email = arielmakestuff@gmail.com
license = MIT license
home-page = https://github.com/arielmakestuff/loadlimit
description-file = README.rst
# Add here all kinds of additional classifiers as defined under
# https://pypi.python.org/pypi?%3Aaction=list_classifiers
classifier =
    Development Status :: 3 - Alpha
    Programming Language :: Python
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5

[entry_points]
# Add here console scripts like:
# console_scripts =
#     script_name = loadlimit.module:function
# as well as other entry_points.
console_scripts =
    loadlimit = loadlimit.cli:main

[files]
# Add here 'data_files', 'packages' or 'namespace_packages'.
# Additional data files are defined as key value pairs of source and target:
packages =
    loadlimit
# data_files =
#    share/loadlimit_doc = doc/*

[extras]
# Add here additional requirements for extra features, like:
# PDF =
#    ReportLab>=1.2
#    RXP

[test]
# py.test options when running `python setup.py test`
addopts = test
[pytest]
# Options for py.test:
# Specify command line options as you would do when invoking py.test directly.
# e.g. --cov-report html (or xml) for html/xml output or --junitxml junit.xml
# in order to write a coverage file that can be read by Jenkins.
addopts =
    --cov loadlimit --cov-report term-missing
    --verbose

[aliases]
docs = build_sphinx

[bdist_wheel]
universal = 1

[build_sphinx]
source_dir = doc
build_dir = doc/_build

[pbr]
# Let pbr run sphinx-apidoc
autodoc_tree_index_modules = True
# autodoc_tree_excludes = ...
# Let pbr itself generate the apidoc
# autodoc_index_modules = True
# autodoc_exclude_modules = ...
# Convert warnings to errors
# warnerrors = True

[flake8]
exclude = docs
